--- a/toggle.css
+++ b/toggle.css
@@ -1,15 +1,42 @@
-.div {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+body {
+    margin: 0;
+    font-family: Arial, sans-serif;
 }
 
-.box {
-    justify-content: center;
-    align-items: center;
+.navbar {
+    overflow: hidden;
+    background-color: #333;
 }
 
-#text {
-    background-color: rgb(39, 96, 255);
-    border-radius: 10px;
+.navbar a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 20px;
+    text-decoration: none;
+}
+
+.navbar a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+.icon {
+    display: none;
+}
+
+@media screen and (max-width: 600px) {
+    .navbar a:not(:first-child) {
+        display: none;
+    }
+
+    .navbar a.icon {
+        float: right;
+        display: block;
+    }
+}
+
+.content {
+    padding: 20px;
 }
