--- a/toggle.css
+++ b/toggle.css
@@ -1,42 +1,14 @@
 body {
     margin: 0;
     font-family: Arial, sans-serif;
+};
+.container{
+    width: 90%;
+    margin: 0 auto;
+    background-color: azure;
 }
-
-.navbar {
-    overflow: hidden;
-    background-color: #333;
-}
-
-.navbar a {
-    float: left;
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 20px;
-    text-decoration: none;
-}
-
-.navbar a:hover {
-    background-color: #ddd;
-    color: black;
-}
-
-.icon {
-    display: none;
-}
-
-@media screen and (max-width: 600px) {
-    .navbar a:not(:first-child) {
-        display: none;
-    }
-
-    .navbar a.icon {
-        float: right;
-        display: block;
-    }
-}
-
-.content {
-    padding: 20px;
+.js-practic{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
